Final modifications on README

--- a/Tournesol/implicit_als.ipynb
+++ b/Tournesol/implicit_als.ipynb
@@ -1575,7 +1575,9 @@
     "\n",
     "# Print the best parameters and precision\n",
     "print(\"Best Parameters:\", best_params)\n",
-    "print(\"Best Precision:\", best_precision)\n"
+    "print(\"Best Precision:\", best_precision)\n",
+    "\n",
+    "K is an evaluation metric that indicates the precision by considering the top 5 recommendations made by the model."
    ]
   },
   {
